@@ -1,3 +1,14 @@
+2013-01-21  Noel Gordon  <noel.gordon@gmail.com>
+
+        [chromium] REGRESSION(r139347) roll chromium deps broke webkit-unit-tests
+        https://bugs.webkit.org/show_bug.cgi?id=106631
+
+        Reviewed by Kent Tamura.
+
+        Fixed in http://crrev.com/177931 and rolled. Renable these tests.
+
+        * tests/WebImageTest.cpp:
+
 2013-01-21  Dirk Schulze  <dschulze@adobe.com>
 
         Add build flag for Canvas's Path object (disabled by default)
